# skill-router

./: .env.example  .gitignore  ARTICLE.md  INSTALL.md  README.md  SKILL.md  pyproject.toml  requirements.txt
data/: skill_embeddings.db  vectors.npy
references/: README.md
scripts/: index_one.py  index_skills.py  retrieve.py
skill_router/: __init__.py  __main__.py  cli.py  config.py  embedding.py  manifest.py  migrate_to_v2.py  registry.py  router.py  scanner.py  search.py
skill_router/_vendor/skill_scanner/data/: default_policy.yaml  permissive_policy.yaml
