[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "skill-router"
version = "1.0.0"
description = "Vector-based semantic routing system for AI Agent skills with integrated security scanning"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }

dependencies = [
    # Core routing dependencies
    "httpx>=0.27.0",
    "numpy>=1.24.0",
    "python-dotenv>=1.0.0",
    # Built-in security scanner (Cisco Skill Scanner)
    "yara-x>=0.5.0",
    "oletools>=0.60",
    "pdfid>=0.2.0",
    "magika>=0.3.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
deep-scan = [
    # LLM providers for deep scanning (optional)
    "anthropic>=0.76.0",
    "openai>=2.0.0",
]
dev = [
    "pytest>=7.0",
    "ruff>=0.1.0",
]

[project.scripts]
skill-router = "skill_router.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["skill_router*"]

[tool.setuptools.package-data]
skill_router = ["_vendor/**/*"]

[tool.ruff]
line-length = 100
target-version = "py310"
